# twilio-agent

./: .dockerignore  .env.production.template  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  handwerker.yaml  pyproject.toml  redis.conf  supervisord.conf  test.py
.claude/: settings.local.json
.claude/agents/: python-code-reviewer.md
dashboard/: package-lock.json  package.json  svelte.config.js  vite.config.ts
dashboard/src/: app.css  app.d.ts  auth.ts  hooks.server.ts
dashboard/src/lib/: api.ts  service.svelte.ts  types.ts  utils.ts
dashboard/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
templates/: call_detail.html  calls_list.html  details.html  location_sharing.html
tests/twilio_agent/actions/: test_location_sharing_actions.py  test_recording_actions.py  test_redis_actions.py  test_telegram_actions.py
tests/twilio_agent/utils/: test_ai.py  test_cache.py  test_contacts.py  test_eleven.py  test_location_utils.py  test_pricing.py  (+1 more)
twilio_agent/: __init__.py  conversation_flow.py  logging_loki.py  main.py  scheduler.py  settings.py  ui.py
twilio_agent/actions/: location_sharing_actions.py  recording_actions.py  redis_actions.py  telegram_actions.py  twilio_actions.py
twilio_agent/api/: auth_middleware.py  dashboard.py
twilio_agent/flow/: __init__.py  address.py  call_entry.py  entry.py  management.py  plz.py  pricing.py  shared.py  sms_and_transfer.py  transfer.py
twilio_agent/utils/: _test.py  ai.py  cache.py  contacts.py  eleven.py  location_utils.py  pricing.py  settings.py  utils.py
(+26 files in other folders)
